<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tweets</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="welcome_message">Get real-time updates about what matters to you.</string>
    <string name="welcome">Welcome to Twitter.</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="newtweet">What\'s Happening?</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="tweet">Tweet</string>
    <string name="twittername">TwitterTweet</string>
    <string name="tagline">Tagline</string>

</resources>